# pinjected_openai

./: pyproject.toml
doc/: git_tag_best_practices.md
pinjected_openai/: vision_llm.py
pinjected_openai/openrouter/: util.py
