[project]
name="pinjected-openai"
version="0.4.20a1"
description="openai bindings for pinjected library"
authors=[
    {name="proboscis",email="nameissoap@gmail.com"}
]

dependencies = [
    "pinjected @ file:///Users/s22625/repos/pinjected_openai/../pinject-design",
    "openai",
    "tiktoken",
    "injected-utils @ file:///Users/s22625/repos/pinjected_openai/../injected_utils",
    "pydub",
    "pillow",
    "loguru",
    "pandas",
    "filelock",
    "reactivex>=4.0.4",
    "moviepy>=1.0.3",
]
readme="README.md"
requires-python=">=3.10"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
